force-app/main/default/objects/Autoforce_vehicle__e/Autoforce_vehicle__e.object-meta.xml
<CustomObject>
    <label>Autoforce vehicle</label>
    <pluralLabel>Autoforce vehicles</pluralLabel>
</CustomObject>