force-app/main/default/objects/Autoforce_vehicle__e/fields/air_pressure__c.field-meta.xml
<CustomField>
    <fullName>air_pressure__c</fullName>
    <label>air pressure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>