force-app/main/default/objects/Autoforce_vehicle__e/fields/deviceId__c.field-meta.xml
<CustomField>
    <fullName>deviceId__c</fullName>
    <description>Used to identify the correct asset (vehice) by the Vehicle Identification Number (VIN__c)</description>
    <label>deviceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>