force-app/main/default/objects/Autoforce_vehicle__e/fields/door__c.field-meta.xml
<CustomField>
    <fullName>door__c</fullName>
    <label>door</label>
    <length>100</length>
    <type>Text</type>
</CustomField>