force-app/main/default/objects/Autoforce_vehicle__e/fields/humidity__c.field-meta.xml
<CustomField>
    <fullName>humidity__c</fullName>
    <label>humidity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>