force-app/main/default/objects/Autoforce_vehicle__e/fields/temperature__c.field-meta.xml
<CustomField>
    <fullName>temperature__c</fullName>
    <label>temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>