force-app/main/default/objects/Autoforce_vehicle__e/fields/ts__c.field-meta.xml
<CustomField>
    <fullName>ts__c</fullName>
    <description>Time Stamp of event</description>
    <label>ts</label>
    <type>DateTime</type>
</CustomField>